--- a/ui.ui
+++ b/ui.ui
@@ -77,6 +77,13 @@
       <item>
        <widget class="QLineEdit" name="lineEdit"/>
       </item>
+      <item>
+       <widget class="QLabel" name="label_4">
+        <property name="text">
+         <string>Apply for a token</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </item>
    </layout>
