显示不同的应用连接，markdown or html

--- a/ui.ui
+++ b/ui.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>748</width>
-    <height>103</height>
+    <height>210</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout">
+   <layout class="QGridLayout" name="gridLayout_2">
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -84,6 +84,40 @@
         </property>
         <property name="text">
          <string>Apply for a token</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="1" column="0">
+     <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLineEdit" name="lineEdit_link1"/>
+      </item>
+      <item row="0" column="1">
+       <widget class="QPushButton" name="pushButton_copy1">
+        <property name="text">
+         <string>copy</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
+       <widget class="QLineEdit" name="lineEdit_link2"/>
+      </item>
+      <item row="1" column="1">
+       <widget class="QPushButton" name="pushButton_copy2">
+        <property name="text">
+         <string>copy</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="0">
+       <widget class="QLineEdit" name="lineEdit_link3"/>
+      </item>
+      <item row="2" column="1">
+       <widget class="QPushButton" name="pushButton_copy3">
+        <property name="text">
+         <string>copy</string>
         </property>
        </widget>
       </item>
